--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,15 @@ img {
 ======================= */
 h1 {
   font-weight: 300;
-  font-size: 2.5rem;
+  font-size: 1.6rem;
+  margin-top: 0;
 }
 
 .title {
   font-size: 2.5rem;
   margin-bottom: 1.5em;
+  font-weight: 900;
+  margin-top: 1em;
 }
 
 .title span {
@@ -147,10 +150,43 @@ nav a:focus {
 ======================= */
 .home-about-textbox {
   background-color: #232323;
-  padding: 3em;
+  padding: 4em;
   width: 100vw;
   margin-left: -2.5%;
   outline: 2px solid #00ff6c;
   outline-offset: -2.5em;
+  color: #fff;
+  position: relative;
 }
 
+.home-about-textbox h1 {
+  color: #00ff6c;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: .9em;
+  background: #232323;
+  padding: 0 .25em;
+}
+
+@media (min-width: 27rem) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  .home-about-textbox h1 {
+    top: .6em;
+    padding: 0 .35em;
+  }
+}
+
+@media (min-width: 60rem) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  .home-about-textbox h1 {
+    top: .3em;
+    padding: 0 .6em;
+  }
+}
