--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+  transition: all ease-in-out 250ms;
 }
 
 body {
@@ -32,6 +33,7 @@ h1 {
 
 p {
   margin-top: 0;
+  font-weight: 300;
   line-height: 1.6;
 }
 
@@ -68,7 +70,8 @@ p:last-of-type {
 ======================= */
 .button {
   display: inline-block;
-  font-size: 1.15rem;
+  /* font-size: 1.15rem; */
+  font-weight: 700;
   text-decoration: none;
   text-transform: uppercase;
   border-width: 2px;
@@ -76,24 +79,21 @@ p:last-of-type {
   padding: .5em 1.75em;
 }
 
+.button-small {
+  font-style: .7rem;
+}
+
 .button-accent {
   color: #00ff6c;
   border-color: #00ff6c;
-  transition: 250ms ease-in-out;
 }
 
 .button-accent:hover,
 .button-accent:focus {
   background: #00ff6c;
   color: #232323;
-  font-weight: 400;
 }
 
-@media (min-width: 60rem) {
-  .button {
-    font-size: 1.5rem;
-  }
-}
 
 
 /* header 
@@ -217,5 +217,59 @@ nav a:focus {
 
   .home-about-textbox h1 {
     top: .5.2em;
+  }
+}
+
+
+/* portfolio
+======================= */
+.portfolio {
+  margin: 3em 0;
+}
+
+.port-item {
+  margin: 0;
+  position: relative;
+}
+
+.port-item img {
+  display: block;
+}
+
+.port-desc {
+  position: absolute;
+  z-index: 100;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  color: #fff;
+  background: rgba(0, 0, 0, .6);
+  padding-bottom: 1em;
+}
+
+.port-desc p {
+  margin: .5em;
+}
+
+
+@media (min-width: 37rem) {
+  .port-item {
+    width: 50%;
+    float: left;
+  }
+}
+
+@media (min-width: 60rem) {
+  .port-item {
+    width: 33.3333334%;
+    overflow: hidden;
+  }
+
+  .port-desc {
+    transform: translateY(150%);
+  }
+
+  .port-item:hover .port-desc {
+    transform: translateY(0%);
   }
 }
